Fix navbar margins on mobile screen widths.

--- a/src/module/navbar.scss
+++ b/src/module/navbar.scss
@@ -26,7 +26,7 @@
     display: flex;
     flex-direction: row;
     list-style: none;
-    margin: 0;
+    margin: 0 0 0 -1rem;
     padding: 0;
 
     &-item {
